# server-local

./: .gitignore  README.md  main.py  pyproject.toml
catalogos/: admin.py  models.py  urls.py  views.py
catalogos/json/: animados.json  anime.json  doramas.json  example.json  games.json  movies.json  novelas.json  series.json
catalogos/migrations/: 0001_initial.py  0002_remove_catalogo_catalogos_c_name_5da10f_idx_and_more.py
catalogos/templates/catalogos/: index.html
files/: admin.py  models.py  urls.py  urls_api.py  views.py
files/migrations/: 0001_initial.py  0002_delete_user.py  0003_file_path_alter_file_parent.py  0004_server_port.py  0005_file_is_video_file_last_modified_file_mime_type.py  0006_alter_file_file_size_alter_file_last_modified_and_more.py
files/templates/files/: index.html
python_casa/: asgi.py  settings.py  urls.py  views.py  wsgi.py
python_casa/management/commands/: file_indexer.py  load_catalogos.py  load_files.py
python_casa/static/css/: catalogos.css  files.css  login.css  users.css
python_casa/templates/index/: index.html
users/: admin.py  decorators.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_alter_user_username.py
users/templates/users/: index.html
