[project]
name = "server-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "django==5.2.3",
    "idna==3.10",
    "requests==2.32.4",
    "sqlparse==0.5.3",
    "urllib3==2.5.0",
]
